--- a/staffprofile.html
+++ b/staffprofile.html
@@ -111,6 +111,7 @@
                 <th class="left-align">Year</th>
                 <th class="left-align">Status</th>
                 <th class="center-align">Feedback</th>
+                <th class="center-align">Option</th>
             </tr>
         </thead>
         <tbody>
@@ -122,15 +123,23 @@
                 <td class="left-align">2021</td>
                 <td class="left-align">ADD</td>
                 <td class="left-align">Hi Advisor, I wanted to add this course to my schedule. It looks like it would be very helpful to understanding programming. Thanks, Bob Swanson</td>
+                <td class="center-align">
+                    <button type="button">Respond</button>
+                    <button type="button">History</button>
+                </td> 
             </tr>
             <tr>
                 <td class="left-align">Bob Johnson</td>
-                <td class="left-align">2</td>
-                <td class="left-align">CSE101</td>
+                <td class="left-align">3</td>
+                <td class="left-align">MATH101</td>
                 <td class="left-align">Fall</td> 
                 <td class="left-align">2021</td>
                 <td class="left-align">ADD</td>
-                <td class="left-align">Hi Advisor, I wanted to add this course to my schedule. It looks like it would be very helpful to understanding programming. Thanks, Bob Swanson</td>
+                <td class="left-align">Hi Advisor, I wanted to add this course to my schedule. It looks like it would be very helpful to understanding calculus. Thanks, Bob Swanson</td>
+                <td class="center-align">
+                    <button type="button">Respond</button>
+                    <button type="button">History</button>
+                </td> 
             </tr>
         </tbody>
     </table>
