--- a/homepage.html
+++ b/homepage.html
@@ -21,7 +21,7 @@
         </h3>
         <table>
             <tr>
-                <?php
+                <!-- <?php
                     $server = "localhost";
                     $username = "root";
                     $password = "";
@@ -55,7 +55,36 @@
                         echo "0 results";
                     }
                     $conn->close();
-                ?>
+                ?> -->
+
+                <td>
+                    <div class="card">
+                        <div class="card-block">
+                            <h3 class="card-title">Computer Science</h3>
+                            <p class="card-text">Computer science deals with the theoretical foundations of information, its computation and practica...</p>
+                            <a href="major.html/?id=1" class="btn btn-primary">See Courses</a>
+                        </div>
+                    </div>
+                </td>
+                <td>
+                    <div class="card">
+                        <div class="card-block">
+                            <h3 class="card-title">Electrical Engineering</h3>
+                            <p class="card-text">Electrical engineering is an engineering discipline concerned with the study, design and application...</p>
+                            <a href="major.html/?id=2" class="btn btn-primary">See Courses</a>
+                        </div>
+                    </div>
+                </td>
+                <td>
+                    <div class="card" >
+                        <div class="card-block">
+                            <h3 class="card-title">Civil Engineering</h3>
+                            <p class="card-text">Civil engineering is a professional engineering discipline that deals with the design, construction,...</p>
+                            <a href="major.html/?id=3" class="btn btn-primary">See Courses</a>
+                        </div>
+                    </div>
+                </td>
+                
             </tr>
         </table>
     </div>
