background color and login screen

--- a/login.html
+++ b/login.html
@@ -21,8 +21,8 @@
   <table>
     <thead>
         <tr>
-            <th>Register</th>
-            <th>Login</th>
+            <th><h1>Register</h1></th>
+            <th><h1>Login</h1></th>
         </tr>
     </thead>
     <tbody>
@@ -90,7 +90,7 @@
             </td>
         </tr>
     </tbody>
-</table>
+  </table>
 
 </body>
 </html>
