--- a/major.html
+++ b/major.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
 <head>
     <link rel="stylesheet" href="cataloguesystem.css">
@@ -80,4 +80,4 @@
             </tbody>
       </table>
 </body>
-</html>
+</html> -->
