--- a/about.html
+++ b/about.html
@@ -10,6 +10,7 @@
     <li><a class="active" href="about.html">About</a></li>
     <li><a href="login.html">Login</a></li>
     <li><a href="profile.php">My Profile</a></li>
+    <li><a href="http://vxs8476.uta.cloud">Blog</a></li>
   </ul>
 
   <br />
