--- a/homepage.html
+++ b/homepage.html
@@ -6,10 +6,11 @@
 <body>
 
     <ul>
-    <li><a class="active" href="homepage.html">Home</a></li>
-    <li><a href="about.html">About</a></li>
-    <li><a href="login.html">Login</a></li>
-    <li><a href="profile.php">My Profile</a></li>
+        <li><a class="active" href="homepage.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="login.html">Login</a></li>
+        <li><a href="profile.php">My Profile</a></li>
+        <li><a href="http://vxs8476.uta.cloud">Blog</a></li>
     </ul>
 
     <div class="centered top">
