--- a/about.html
+++ b/about.html
@@ -6,10 +6,10 @@
 <body>
 
   <ul>
-    <li><a href="homepage.html">Home</a></li>
+    <li><a href="homepage.php">Home</a></li>
     <li><a class="active" href="about.html">About</a></li>
-    <li><a href="login.html">Login</a></li>
-    <li><a href="profile.php">My Profile</a></li>
+    <li><a href="login-page.php">Login</a></li>
+    <li><a href="https://vxs8476.uta.cloud/Catalog-Management-System/profile.php">My Profile</a></li>
     <li><a href="http://vxs8476.uta.cloud">Blog</a></li>
   </ul>
 
